--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 73.042.962/0004-20</p>
         </div>
     </footer>
-    <script src="./src/main.js"></script>
+    <script src="./src/scripts/main.js"></script>
 </body>
 
 </html>
