--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone Disney+</title>
     <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="shortcut icon" href="./src/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
